--- a/DMH/index.html
+++ b/DMH/index.html
@@ -721,11 +721,12 @@
                   <p><a href="https://www.google.com/maps/place/23%C2%B018'39.2%22N+72%C2%B024'15.4%22E/@23.3108788,72.4017143,17z/data=!3m1!4b1!4m4!3m3!8m2!3d23.3108788!4d72.4042892?entry=ttu"><strong> Part-C, SN-888, Nr.Kamlamrut Pharma<br>Village:- Irana, Kadi <br>Mehsana:-382715</p></strong></a>
               </div>
 
-                <div class="col-lg-4 info mt-4 mt-lg-0">
+                <div class="col-lg-4 info mt-4 mt-lg-0 email" >
                   <i class="bi bi-envelope"></i>
                   <h4>Email:</h4>
-                  <p>info@dmhpackagingllp.com<br>dishant.mehta@dmhpackagingllp.com</p>
-                </div>
+                  <a href = "mailto:info@dmhpackagingllp.com"> info@dmhpackagingllp.com<br></a>
+              <a class="email-link" href = "mailto:dishant.mehta@dmhpackagingllp.com">dishant.mehta@dmhpackagingllp.com<br> </a>
+            </div>
 
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-phone"></i>
@@ -795,9 +796,9 @@
           <div class="col-lg-4 col-md-6 footer-contact">
             <h3>DMH Packaging LLP</h3>
             <p><a href="https://www.google.com/maps/place/23%C2%B018'39.2%22N+72%C2%B024'15.4%22E/@23.3108788,72.4017143,17z/data=!3m1!4b1!4m4!3m3!8m2!3d23.3108788!4d72.4042892?entry=ttu"><strong> Part-C, SN-888, Nr.Kamlamrut Pharma<br>Village:- Irana, Kadi <br>Mehsana:-382715</p></strong></a>
-             <p ><a href = "tel:+91 7383214363"><strong>Phone:</strong> +91 7383214363<br> </a>
+             <p><a href = "tel:+91 7383214363"><strong>Phone:</strong> +91 7383214363<br> </a>
               <a href = "mailto:info@dmhpackagingllp.com"><strong>Email:</strong> info@dmhpackagingllp.com<br></a>
-              <a href = "mailto:dishant.mehta@dmhpackagingllp.com"><strong>Email:</strong> dishant.mehta@dmhpackagingllp.com<br></a>
+              <a href = "mailto:dishant.mehta@dmhpackagingllp.com"><strong>Email:</strong> dishant.mehta@dmhpackagingllp.com<br> </a>
             </p>
           </div>
 
