--- a/DMH/index.html
+++ b/DMH/index.html
@@ -892,7 +892,7 @@
     // attribution: '&copy; <a href="http://www.openstreetmap.org/copyright"></a>'
     }).addTo(map);
     L.marker([23.310879,72.404289]).addTo(map)
-    .bindPopup('DHM Packaging LLP')
+    .bindPopup('DMH Packaging LLP')
     .openPopup(); 
   </script>
 
