--- a/DMH/overlap.html
+++ b/DMH/overlap.html
@@ -43,11 +43,11 @@
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
-          <li><a class="nav-link scrollto active" href="/DMH/#hero">Home</a></li>
-          <li><a class="nav-link scrollto" href="/DMH/#about">About</a></li>
-          <li><a class="nav-link scrollto" href="/DMH/#services">Services</a></li>
-          <li><a class="nav-link scrollto " href="/DMH/#portfolio">Products</a></li>
-          <li><a class="nav-link scrollto" href="/DMH/#team">Our Team</a></li>
+          <li><a class="nav-link scrollto active" href="index.html#hero">Home</a></li>
+          <li><a class="nav-link scrollto" href="index.html#about">About</a></li>
+          <li><a class="nav-link scrollto" href="index.html#services">Services</a></li>
+          <li><a class="nav-link scrollto " href="index.html#portfolio">Products</a></li>
+          <li><a class="nav-link scrollto" href="index.html#team">Our Team</a></li>
           <!-- <li class="dropdown"><a href="#"><span>Drop Down</span> <i class="bi bi-chevron-down"></i></a>
             <ul>
               <li><a href="#">Drop Down 1</a></li>
@@ -169,22 +169,22 @@
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Useful Links</h4>
             <ul>
-              <li><i class="bx bx-chevron-right"></i> <a href="#hero">Home</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#about">About</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#services">Services</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#portfolio">Products</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#team">Our Team</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#contact">Contact</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#hero">Home</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#about">About</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#services">Services</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#portfolio">Products</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#team">Our Team</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#contact">Contact</a></li>
             </ul>
           </div>
 
           <div class="col-lg-3 col-md-6 footer-links">
             <h4>Our Products</h4>
             <ul >
-              <li><i class="bx bx-chevron-right"></i> <a href="#portfolio">All</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#portfolio">Corrugated Boxes</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#portfolio">Corrugated Sheets/Rolls</a></li>
-              <li><i class="bx bx-chevron-right"></i> <a href="#portfolio">Corrugated cartons</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#portfolio">All</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#portfolio">Corrugated Boxes</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#portfolio">Corrugated Sheets/Rolls</a></li>
+              <li><i class="bx bx-chevron-right"></i> <a href="index.html#portfolio">Corrugated cartons</a></li>
             </ul>
           </div>
 
