--- a/DMH/index.html
+++ b/DMH/index.html
@@ -619,8 +619,8 @@
               </p>
               <div class="social">
                 <a href=""><i class="bi bi-twitter"></i></a>
-                <a href=""><i class="bi bi-facebook"></i></a>
-                <a href=""><i class="bi bi-instagram"></i></a>
+                <!-- <a href=""><i class="bi bi-facebook"></i></a> -->
+                <!-- <a href=""><i class="bi bi-instagram"></i></a> -->
                 <a href=""><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
@@ -730,7 +730,7 @@
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-phone"></i>
                   <h4>Call:</h4>
-                  <p ><a href = "tel:+91 7383214363"><strong>Phone:</strong> +91 7383214363<br> </a>
+                  <p ><a href = "tel:+91 7383214363"><strong>Phone:</strong> +91 9173707808<br> </a>
                 </div>
               </div>
             </div>
@@ -867,8 +867,8 @@
     function sendEmail(){
       Email.send({
     Host : "smtp.elasticemail.com",
-    Username : "dishant.mehta@dmhpackagingllp.com",
-    Password : "2EE84E58B89AD71737213C050BB7FC11D4AC",
+    Username : "tejdoshi5@gmail.com",
+    Password : "2847F7D42C58128C3EA83D6268100DD8FC1E",
     To : 'info@dmhpackagingllp.com',
     From : "dishant.mehta@dmhpackagingllp.com",
     Subject : "New enquiry",
