--- a/DMH/sheets.html
+++ b/DMH/sheets.html
@@ -87,7 +87,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfoio Details</h2>
+          <h2>Product Details</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li>Product Details</li>
