Changes in email body , message notification, product pages completed and social links removed.

--- a/DMH/index.html
+++ b/DMH/index.html
@@ -469,11 +469,11 @@
               <figure>
                 <img src="assets/img/portfolio/roll.jpeg" class="img-fluid" alt="">
                 <a href="assets/img/portfolio/roll.jpeg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="rolls.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">Corrugated Rolls</a></h4>
+                <h4><a href="rolls.html">Corrugated Rolls</a></h4>
                 <p>Sheets/Rolls</p>
               </div>
             </div>
@@ -484,11 +484,11 @@
               <figure>
                 <img src="assets/img/portfolio/tray.jpeg" class="img-fluid" alt="">
                 <a href="assets/img/portfolio/tray.jpeg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="trays.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">Corrugated Sheet Trays</a></h4>
+                <h4><a href="trays.html">Corrugated Sheet Trays</a></h4>
                 <p>Sheets/Rolls</p>
               </div>
             </div>
@@ -499,11 +499,11 @@
               <figure>
                 <img src="assets/img/portfolio/half.jpeg" class="img-fluid" alt="">
                 <a href="assets/img/portfolio/half" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
-                <a href="portfolio-details.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
+                <a href="slotted.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
               </figure>
 
               <div class="portfolio-info">
-                <h4><a href="portfolio-details.html">Half Slotted Cartons</a></h4>
+                <h4><a href="slotted.html">Half Slotted Cartons</a></h4>
                 <p>Corrugated Cartons</p>
               </div>
             </div>
@@ -618,10 +618,10 @@
                 Passionate about the art and science of corrugated box production, He brings 8 years of dedicated experience to the table. His journey in this industry has been marked by a commitment to quality, innovation, and continuous improvement.
               </p>
               <div class="social">
-                <a href=""><i class="bi bi-twitter"></i></a>
-                <!-- <a href=""><i class="bi bi-facebook"></i></a> -->
-                <!-- <a href=""><i class="bi bi-instagram"></i></a> -->
-                <a href=""><i class="bi bi-linkedin"></i></a>
+                <!-- <a href=""><i class="bi bi-twitter"></i></a>
+                <a href=""><i class="bi bi-facebook"></i></a>
+                <a href=""><i class="bi bi-instagram"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a> -->
               </div>
             </div>
           </div>
@@ -635,10 +635,10 @@
                 With a dynamic career spanning various industries and roles, He thrives on challenges and adaptability. His extensive experience has equipped him with a multifaceted skill set, making him a valuable asset in diverse business environments.
               </p>
               <div class="social">
-                <a href=""><i class="bi bi-twitter"></i></a>
+                <!-- <a href=""><i class="bi bi-twitter"></i></a>
                 <a href=""><i class="bi bi-facebook"></i></a>
                 <a href=""><i class="bi bi-instagram"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a> -->
               </div>
             </div>
           </div>
@@ -652,10 +652,10 @@
                 A passionate and results-driven leader with a proven track record of guiding teams to success. His leadership philosophy revolves around fostering collaboration, empowering team members, and driving organizational growth through innovation and strategic vision.
               </p>
               <div class="social">
-                <a href=""><i class="bi bi-twitter"></i></a>
+                <!-- <a href=""><i class="bi bi-twitter"></i></a>
                 <a href=""><i class="bi bi-facebook"></i></a>
                 <a href=""><i class="bi bi-instagram"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a> -->
               </div>
             </div>
           </div>
@@ -669,10 +669,10 @@
                 An accomplished serial entrepreneur with a passion for identifying opportunities and building successful businesses across various industries. He thrives in dynamic environments, managing and growing multiple ventures simultaneously.
               </p>
               <div class="social">
-                <a href=""><i class="bi bi-twitter"></i></a>
+                <!-- <a href=""><i class="bi bi-twitter"></i></a>
                 <a href=""><i class="bi bi-facebook"></i></a>
                 <a href=""><i class="bi bi-instagram"></i></a>
-                <a href=""><i class="bi bi-linkedin"></i></a>
+                <a href=""><i class="bi bi-linkedin"></i></a> -->
               </div>
             </div>
           </div>
@@ -687,8 +687,8 @@
               </p>
               <div class="social">
                 <a href=""><i class="bi bi-twitter"></i></a>
-                <a href=""><i class="bi bi-facebook"></i></a>
-                <a href=""><i class="bi bi-instagram"></i></a>
+                <!-- <a href=""><i class="bi bi-facebook"></i></a> -->
+                <!-- <a href=""><i class="bi bi-instagram"></i></a> -->
                 <a href=""><i class="bi bi-linkedin"></i></a>
               </div>
             </div>
@@ -764,15 +764,19 @@
                 </div>
               </div>
               <div class="form-group mt-3">
+                <input type="tel" class="form-control" name="phonenumber" id="phonenumber" placeholder="Phone Number" required>
+              </div>
+              <div class="form-group mt-3">
                 <input type="text" class="form-control" name="subject" id="subject" placeholder="Subject" required>
               </div>
               <div class="form-group mt-3">
                 <textarea class="form-control" name="message" rows="5" id="message" placeholder="How can we help you?" required></textarea>
               </div>
               <div class="my-3">
-                <div class="loading">Loading</div>
-                <div class="error-message"></div>
+                <!-- <div class="loading">Loading</div>
+                <div class="error-message"></div> -->
                 <div class="sent-message">Your message has been sent. Thank you!</div>
+                <div class="sent-message1">Your message has been sent, our team will contact you shortly.Thanks!</div>
               </div>
               <div class="text-center"><button type="submit">Send Message</button></div>
             </form>
@@ -796,7 +800,7 @@
           <div class="col-lg-4 col-md-6 footer-contact">
             <h3>DMH Packaging LLP</h3>
             <p><a href="https://www.google.com/maps/place/23%C2%B018'39.2%22N+72%C2%B024'15.4%22E/@23.3108788,72.4017143,17z/data=!3m1!4b1!4m4!3m3!8m2!3d23.3108788!4d72.4042892?entry=ttu"><strong> Part-C, SN-888, Nr.Kamlamrut Pharma<br>Village:- Irana, Kadi <br>Mehsana:-382715</p></strong></a>
-             <p><a href = "tel:+91 7383214363"><strong>Phone:</strong> +91 7383214363<br> </a>
+             <p><a href = "tel:+91 7383214363"><strong>Phone:</strong> +91  9173707808<br> </a>
               <a href = "mailto:info@dmhpackagingllp.com"><strong>Email:</strong> info@dmhpackagingllp.com<br></a>
               <a href = "mailto:dishant.mehta@dmhpackagingllp.com"><strong>Email:</strong> dishant.mehta@dmhpackagingllp.com<br> </a>
             </p>
@@ -865,6 +869,13 @@
   <script src="assets/js/main.js"></script>
   <script src="https://smtpjs.com/v3/smtp.js"></script>
   <script>
+   function success(){
+    document.querySelector('.sent-message1').style.display = 'block';
+   }
+   const form = document.querySelector('form');
+   form.addEventListener('submit', success);
+
+    
     function sendEmail(){
       Email.send({
     Host : "smtp.elasticemail.com",
@@ -875,6 +886,7 @@
     Subject : "New enquiry",
     Body : "Name:-" + document.getElementById('name').value +
     "<br> Email:- " + document.getElementById('email').value +
+    "<br> Phone Number:- " + document.getElementById('phonenumber').value +
     "<br> Subject:- " + document.getElementById('subject').value +
     "<br> Message:- " + document.getElementById('message').value
 }).then(
