--- a/DMH/slotted.html
+++ b/DMH/slotted.html
@@ -87,7 +87,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfoio Details</h2>
+          <h2>Portfolio Details</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li>Product Details</li>
@@ -104,7 +104,7 @@
         <div class="row gy-4">
 
           <div class="col-lg-8 product-image" >
-            <img src="assets/img/portfolio/duplex.jpeg" alt="duplex-img">
+            <img src="assets/img/portfolio/half.jpeg" alt="duplex-img">
             <!-- <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
@@ -129,7 +129,7 @@
             <div class="portfolio-info">
               <h3>Product Information</h3>
               <ul>
-                <li><strong>Category</strong>: Corrugated Boxes</li>
+                <li><strong>Category</strong>: Corrugated Cartons</li>
                 <li><strong>Client</strong>: Confidential</li>
                 <li><strong>Project date</strong>: 16 September, 2023</li>
                 <!-- <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li> -->
@@ -138,7 +138,7 @@
             <div class="portfolio-description">
               <h2>Product Summary</h2>
               <p>
-                Duplex corrugated boxes are a versatile and highly effective packaging solution that combines the strength and durability of corrugated cardboard with the visual appeal of coated paper. These boxes are known for their excellent printability and are often used for packaging a wide range of products, including electronics, cosmetics, pharmaceuticals, and more.
+                Half-slotted cartons, or HSC for short, are a popular choice in the packaging industry due to their simplicity and versatility. They are designed with an open top and flaps at the bottom, making them suitable for a wide range of applications. HSCs come in various sizes and strengths to accommodate different products and shipping needs.
               </p>
             </div>
           </div>
