--- a/DMH/rolls.html
+++ b/DMH/rolls.html
@@ -87,7 +87,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfoio Details</h2>
+          <h2>Portfolio Details</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li>Product Details</li>
@@ -104,7 +104,7 @@
         <div class="row gy-4">
 
           <div class="col-lg-8 product-image" >
-            <img src="assets/img/portfolio/duplex.jpeg" alt="duplex-img">
+            <img src="assets/img/portfolio/roll.jpeg" alt="duplex-img">
             <!-- <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
@@ -129,16 +129,15 @@
             <div class="portfolio-info">
               <h3>Product Information</h3>
               <ul>
-                <li><strong>Category</strong>: Corrugated Boxes</li>
+                <li><strong>Category</strong>: Corrugated Sheets/Rolls</li>
                 <li><strong>Client</strong>: Confidential</li>
-                <li><strong>Project date</strong>: 16 September, 2023</li>
+                <li><strong>Project date</strong>: 21 September, 2023</li>
                 <!-- <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li> -->
               </ul>
             </div>
             <div class="portfolio-description">
               <h2>Product Summary</h2>
-              <p>
-                Duplex corrugated boxes are a versatile and highly effective packaging solution that combines the strength and durability of corrugated cardboard with the visual appeal of coated paper. These boxes are known for their excellent printability and are often used for packaging a wide range of products, including electronics, cosmetics, pharmaceuticals, and more.
+              <p>Corrugated rolls are a fundamental component of the packaging and shipping industry. They are known for their durability, versatility, and cost-effectiveness. These rolls are made from a unique construction of layers that give them their distinctive strength and flexibility. Corrugated rolls are commonly used for packaging, cushioning, and protection of various products during transit.
               </p>
             </div>
           </div>
