--- a/DMH/index.html
+++ b/DMH/index.html
@@ -686,10 +686,10 @@
                 A seasoned professional with a strong background in machinery management and a proven track record of optimizing operational efficiency. His leadership and technical skills combined make him a valuable asset in accomplishing complex machinery operations via managing teams.
               </p>
               <div class="social">
-                <a href=""><i class="bi bi-twitter"></i></a>
+                <!-- <a href=""><i class="bi bi-twitter"></i></a> -->
                 <!-- <a href=""><i class="bi bi-facebook"></i></a> -->
                 <!-- <a href=""><i class="bi bi-instagram"></i></a> -->
-                <a href=""><i class="bi bi-linkedin"></i></a>
+                <!-- <a href=""><i class="bi bi-linkedin"></i></a> -->
               </div>
             </div>
           </div>
@@ -731,7 +731,7 @@
                 <div class="col-lg-4 info mt-4 mt-lg-0">
                   <i class="bi bi-phone"></i>
                   <h4>Call:</h4>
-                  <p ><a href = "tel:+91 7383214363"><strong>Phone:</strong> +91 9173707808<br> </a>
+                  <p ><a href = "tel: +91 9173707808"><strong>Phone:</strong> +91 9173707808<br> </a>
                 </div>
               </div>
             </div>
@@ -800,7 +800,7 @@
           <div class="col-lg-4 col-md-6 footer-contact">
             <h3>DMH Packaging LLP</h3>
             <p><a href="https://www.google.com/maps/place/23%C2%B018'39.2%22N+72%C2%B024'15.4%22E/@23.3108788,72.4017143,17z/data=!3m1!4b1!4m4!3m3!8m2!3d23.3108788!4d72.4042892?entry=ttu"><strong> Part-C, SN-888, Nr.Kamlamrut Pharma<br>Village:- Irana, Kadi <br>Mehsana:-382715</p></strong></a>
-             <p><a href = "tel:+91 7383214363"><strong>Phone:</strong> +91  9173707808<br> </a>
+             <p><a href = "tel:+91 9173707808"><strong>Phone:</strong> +91  9173707808<br> </a>
               <a href = "mailto:info@dmhpackagingllp.com"><strong>Email:</strong> info@dmhpackagingllp.com<br></a>
               <a href = "mailto:dishant.mehta@dmhpackagingllp.com"><strong>Email:</strong> dishant.mehta@dmhpackagingllp.com<br> </a>
             </p>
