--- a/DMH/trays.html
+++ b/DMH/trays.html
@@ -87,7 +87,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfoio Details</h2>
+          <h2>Corrugated Trays</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li>Product Details</li>
@@ -104,7 +104,7 @@
         <div class="row gy-4">
 
           <div class="col-lg-8 product-image" >
-            <img src="assets/img/portfolio/duplex.jpeg" alt="duplex-img">
+            <img src="assets/img/portfolio/tray.jpeg" alt="duplex-img">
             <!-- <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
@@ -129,7 +129,7 @@
             <div class="portfolio-info">
               <h3>Product Information</h3>
               <ul>
-                <li><strong>Category</strong>: Corrugated Boxes</li>
+                <li><strong>Category</strong>: Corrugated Sheets/Rolls</li>
                 <li><strong>Client</strong>: Confidential</li>
                 <li><strong>Project date</strong>: 16 September, 2023</li>
                 <!-- <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li> -->
