--- a/DMH/rolls.html
+++ b/DMH/rolls.html
@@ -87,7 +87,7 @@
       <div class="container">
 
         <div class="d-flex justify-content-between align-items-center">
-          <h2>Portfoio Details</h2>
+          <h2>Corrugated Rolls</h2>
           <ol>
             <li><a href="index.html">Home</a></li>
             <li>Product Details</li>
@@ -104,7 +104,7 @@
         <div class="row gy-4">
 
           <div class="col-lg-8 product-image" >
-            <img src="assets/img/portfolio/duplex.jpeg" alt="duplex-img">
+            <img src="assets/img/portfolio/roll.jpeg" alt="duplex-img">
             <!-- <div class="portfolio-details-slider swiper">
               <div class="swiper-wrapper align-items-center">
 
@@ -129,7 +129,7 @@
             <div class="portfolio-info">
               <h3>Product Information</h3>
               <ul>
-                <li><strong>Category</strong>: Corrugated Boxes</li>
+                <li><strong>Category</strong>: Corrugated Sheets/Rolls</li>
                 <li><strong>Client</strong>: Confidential</li>
                 <li><strong>Project date</strong>: 16 September, 2023</li>
                 <!-- <li><strong>Project URL</strong>: <a href="#">www.example.com</a></li> -->
@@ -138,7 +138,7 @@
             <div class="portfolio-description">
               <h2>Product Summary</h2>
               <p>
-                Duplex corrugated boxes are a versatile and highly effective packaging solution that combines the strength and durability of corrugated cardboard with the visual appeal of coated paper. These boxes are known for their excellent printability and are often used for packaging a wide range of products, including electronics, cosmetics, pharmaceuticals, and more.
+                Corrugated rolls are versatile and indispensable in the world of packaging. These rolls are made from corrugated material, which consists of a wavy inner layer sandwiched between two flat outer layers. This unique construction gives corrugated rolls their strength, durability, and cushioning properties.
               </p>
             </div>
           </div>
@@ -160,7 +160,7 @@
           <div class="col-lg-4 col-md-6 footer-contact">
             <h3>DMH Packaging LLP</h3>
             <p><a href="https://www.google.com/maps/place/23%C2%B018'39.2%22N+72%C2%B024'15.4%22E/@23.3108788,72.4017143,17z/data=!3m1!4b1!4m4!3m3!8m2!3d23.3108788!4d72.4042892?entry=ttu"><strong> Part-C, SN-888, Nr.Kamlamrut Pharma<br>Village:- Irana, Kadi <br>Mehsana:-382715</p></strong></a>
-             <p ><a href = "tel:+91 7383214363"><strong>Phone:</strong> +91 7383214363<br> </a>
+             <p ><a href = "tel:+91 7383214363"><strong>Phone:</strong> +91 9173707808<br> </a>
               <a href = "mailto:info@dmhpackagingllp.com"><strong>Email:</strong> info@dmhpackagingllp.com<br></a>
               <a href = "mailto:dishant.mehta@dmhpackagingllp.com"><strong>Email:</strong> dishant.mehta@dmhpackagingllp.com<br></a>
             </p>
