--- a/DMH/index.html
+++ b/DMH/index.html
@@ -6,12 +6,14 @@
 <html lang="en">
 
 <head>
+  <meta content="At DMH Packaging, we're passionate about corrugated boxes. With a commitment to quality and innovation, we're your go-to partner for all your packaging needs." name="description">
+  <meta content="Corrugated Box, Corrugated Cartons, Corrugated Sheets, Corrugated Rolls, Packaging" name="keywords">
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>DMH Packaging LLP</title>
-  <meta content="" name="description">
-  <meta content="" name="keywords">
+  
+  
 
   <!-- Favicons -->
   <link href="assets/img/dmh logo1.png" rel="icon">
