--- a/DMH/index.html
+++ b/DMH/index.html
@@ -7,7 +7,8 @@
 
 <head>
   <meta content="At DMH Packaging, we're passionate about corrugated boxes. With a commitment to quality and innovation, we're your go-to partner for all your packaging needs." name="description">
-  <meta content="Corrugated Box, Corrugated Cartons, Corrugated Sheets, Corrugated Rolls, Packaging" name="keywords">
+  <meta content="Corrugated Box, Corrugated Cartons, Corrugated Sheets, Corrugated Rolls, Packaging, DMH, DMH Packaging,
+  Corrugated box manufacturers in Gujarat, Packaging in Ahmedabad, Corrugated Box manufacturers in kalol" name="keywords">
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
