--- a/DMH/index.html
+++ b/DMH/index.html
@@ -7,7 +7,7 @@
 
 <head>
   <meta content="At DMH Packaging, we're passionate about corrugated boxes. With a commitment to quality and innovation, we're your go-to partner for all your packaging needs." name="description">
-  <meta content="Corrugated Box, Corrugated Cartons, Corrugated Sheets,Corrugated Rolls, Packaging, DMH, DMH Packaging,printing and packaging company, custom packaging boxes, flexible packaging, shipping, boxes, product, eco friendly, plastic, sustainable, costmetic, usps, edible, labeling, aseptic, cardboard, solutions, creative, logo, gift, innovative, printing, paper, pharmaceutical, primary, retail,  bottle, dish pack, food, glossier, green, ice cream, mushroom,brand, wholesale, pizza, dieline, industrail, medical, reasable, secondary, UPS, elelash, chocolate, ecommerce, glass, honey, perfume, sleeve, toy, unique, branding, soap, lipstick, loop, makeup,pallet, supplies, India"" name="keywords">
+  <meta content="Corrugated Box, COrrugated Boxes, Corrugated Cartons, Corrugated Sheets,Corrugated Rolls, Packaging, DMH, DMH Packaging,printing and packaging company, custom packaging boxes, flexible packaging, shipping, boxes, product, eco friendly, plastic, sustainable, costmetic, usps, edible, labeling, aseptic, cardboard, solutions, creative, logo, gift, innovative, printing, paper, pharmaceutical, primary, retail,  bottle, dish pack, food, glossier, green, ice cream, mushroom,brand, wholesale, pizza, dieline, industrail, medical, reasable, secondary, UPS, elelash, chocolate, ecommerce, glass, honey, perfume, sleeve, toy, unique, branding, soap, lipstick, loop, makeup,pallet, supplies, India" name="keywords">
   <meta name="geo.region" content="IN-GJ">
   <meta name="geo.placename" content="Ahmedabad">
 
