Added a new product
Butter Paper

--- a/DMH/index.html
+++ b/DMH/index.html
@@ -291,7 +291,8 @@
               <li data-filter="*" class="filter-active" id="aprd">All</li>
               <li data-filter=".filter-app" id="cbx">Corrugated Boxes</li>
               <li data-filter=".filter-card" id="cshrl">Corrugated Sheets/Rolls</li>
-              <li data-filter=".filter-web" id="ccr">Corrugated cartons</li>
+              <li data-filter=".filter-web" id="ccr">Corrugated cartons</li> 
+              <li data-filter=".filter-paper" id="btp">Butter Paper</li> 
             </ul>
           </div>
         </div>
@@ -432,6 +433,33 @@
               </div>
             </div>
           </div>
+
+          <div class="col-lg-4 col-md-6 portfolio-item filter-paper wow fadeInUp" data-wow-delay="0.2s">
+            <div class="portfolio-wrap">
+              <figure>
+                <img src="assets/img/portfolio/butterPaper.jpeg" class="img-fluid" alt="">
+                <a href="assets/img/portfolio/butterPaper.jpeg" class="link-preview portfolio-lightbox" data-gallery="portfolioGallery" title="Preview"><i class="bx bx-plus"></i></a>
+                <a href="butterPaper.html" class="link-details" title="More Details"><i class="bx bx-link"></i></a>
+              </figure>
+
+              <div class="portfolio-info">
+                <h4><a href="slotted.html">Butter Paper</a></h4>
+                <p>Butter Paper</p>
+              </div>
+            </div>
+          </div>
+
+
+
+
+
+
+
+
+
+
+
+
 
         </div>
 
